Fixed the outputted jar and changed the JDK version to the LTS 17, Java was being dumb and not opening the jar.